charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yelb-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/default-backend: yelb-appserver
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              service:
                name: yelb-appserver
                port:
                  number: 4567
            pathType: Prefix
